syntax = "proto3";

package banking;

import "google/protobuf/duration.proto";

option go_package = "github.com/LavaJover/shvark-banking-service;bankingpb";

service BankingService {
    rpc CreateBankDetail(CreateBankDetailRequest) returns (CreateBankDetailResponse);
}

message CreateBankDetailRequest {
    string trader_id = 1;
    string currency = 2;
    string country = 3;
    double min_amount = 4;
    double max_amount = 5;
    string bank_name = 6;
    string payment_system = 7;
    bool enabled = 8;
    google.protobuf.Duration delay = 9; 
}

message CreateBankDetailResponse {
    string bank_detail_id = 1;
    string message = 2;
}